--- a/frontend/iot-frontend/src/components/Navbar.css
+++ b/frontend/iot-frontend/src/components/Navbar.css
@@ -25,9 +25,9 @@
 }
 
 .brand {
-  font-size: 18px;
+  font-size: 17px;
   font-weight: 600;
-  color: #0f172a;
+  color: rgb(104, 90, 255) ;
   white-space: nowrap;
 }
 
@@ -59,7 +59,7 @@
   display: flex;
   align-items: center;
   gap: 14px;
-  padding: 13px 18px;
+  padding: 12px 18px;
   border-radius: 14px;
   text-decoration: none;
   color: #475569;
