--- a/frontend/iot-frontend/src/pages/objects/Objects.css
+++ b/frontend/iot-frontend/src/pages/objects/Objects.css
@@ -9,6 +9,7 @@
   min-height: 100vh;
 }
 
+
 /* =========================
    TITLE
 ========================= */
@@ -16,9 +17,12 @@
   color: #0b2545;
   margin-bottom: 25px;
   font-size: 1.5em;
-  font-weight: 600;
+  font-weight: 800;
 }
-
+.page-title svg {
+  vertical-align: middle;
+  color: #0b2545;
+}
 /* =========================
    TOP BAR
 ========================= */
@@ -33,17 +37,19 @@
    ADD BUTTON
 ========================= */
 .add-btn {
-  background: #0f1f3d;
+  background: #1d335cfb;
   color: white;
   padding: 12px 20px;
   border-radius: 100px;
   border: none;
-  font-weight: 500;
+  font-weight: 800;
   cursor: pointer;
 }
 
-.add-btn:hover {
-  background: #1d3566;
+button:hover {
+  background: linear-gradient(135deg, #2563EB, #1E3A8A);
+  transform: translateY(-2px);
+  box-shadow: 0 6px 14px rgba(0,0,0,0.15);
 }
 
 /* =========================
@@ -53,11 +59,12 @@
   display: flex;
   gap: 20px;
   margin: 25px 0;
+  height : 12em;
 }
 
 .card {
   flex: 1;
-  padding: 20px;
+  padding: 5px;
   border-radius: 14px;
   box-shadow: 0 6px 18px rgba(0,0,0,0.12);
   transition: 0.3s ease;
@@ -66,35 +73,48 @@
   justify-content: center;
   align-items: center;     /* centre horizontalement */
   text-align: center;      /* centre le texte */
-
-
 }
 
 /* Carte Total Objets - BLEU */
 .card:first-child {
-  background: #253758;  /* Bleu vif */
+  background: #1e3c75fb;  /* Bleu vif */
   color: white;
 }
+.card:first-child:hover {
+  background: linear-gradient(135deg, #0c3792, #132e78);
+  transform: translateY(-2px);
+  box-shadow: 0 6px 14px rgba(0,0,0,0.15);
+}
+
 
 /* Carte Actifs - VERT */
 .card:nth-child(2) {
-  background: #059669; /* Vert émeraude */
+  background: #1bb542cc; /* Vert émeraude */
   color: white;
+}
+.card:nth-child(2):hover {
+  background: linear-gradient(135deg, #25c53d, #059669);
+  transform: translateY(-2px);
+  box-shadow: 0 6px 14px rgba(0,0,0,0.15);
 }
 
 /* Carte Inactifs - ROUGE/ORANGE */
 .card:last-child {
-   background: #dc2626;  /* Orange */
+   background: #BE123C;
   color: white;
 }
-
-.card:hover {
-  transform: translateY(-5px);
+.card:last-child:hover {
+background: linear-gradient(135deg, #ee0e2f, #BE123C);
+  transform: translateY(-2px);
+  box-shadow: 0 6px 14px rgba(0,0,0,0.15);
 }
+/*.card:hover {
+  transform: translateY(-5px);
+}*/
 
 .card h3 {
-  font-size: 16px;
-  font-weight: 500;
+  font-size: 12px;
+  font-weight: bold;
   opacity: 0.9;
   margin: 0 0 10px 0;
 }
@@ -105,7 +125,12 @@
   color: white;
   margin: 0;
 }
-
+.card-icon {
+  background: rgba(255,255,255,0.2);
+  padding: 10px;
+  border-radius: 50%;
+  margin-bottom: 12px;
+}
 /* =========================
    FORM
 ========================= */
@@ -139,8 +164,8 @@
 .save-btn {
   grid-column: 1 / -1;
   justify-self: center;
-  background-color: #ffd24c;
-  color: #0b2545;
+  background: linear-gradient(135deg, #2563EB, #1E3A8A);
+  color: white;
   border: none;
   padding: 12px 100px;
   border-radius: 80px;
@@ -148,10 +173,12 @@
   cursor: pointer;
   transition: 0.3s;
 }
-
-.save-btn:hover {
-  background-color: #ffbf1f;
+button:hover {
+  background: linear-gradient(135deg, #2563EB, #1E3A8A);
+  transform: translateY(-2px);
+  box-shadow: 0 6px 14px rgba(0,0,0,0.15);
 }
+
 
 /* =========================
    TABLE
@@ -166,7 +193,7 @@
 }
 
 .objects-table thead {
-  background: #253758;
+  background: #1e3c75fb;
   color: white;
 }
 
